--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <!-- endbuild -->
   </head>
 
-  <body data-ng-app="Muzza">
+  <body data-ng-app="MuzzaStore">
     <ion-nav-view></ion-nav-view>
 
     <!-- build:js scripts/vendor.js -->
