--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,11 @@
     <script src="scripts/controllers.js"></script>
     <script src="scripts/templates.js"></script>
 
+    <script src="scripts/order/controllers/OrderList.js"></script>
+    <script src="scripts/order/factories/Order.js"></script>
+    <script src="scripts/order/factories/OrderDetails.js"></script>
+    <script src="scripts/order/services/Order.js"></script>
+
 
 
     <!-- endbuild -->
