Orders list by status into directive

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <script src="scripts/order/factories/Order.js"></script>
     <script src="scripts/order/factories/OrderDetails.js"></script>
     <script src="scripts/order/services/Order.js"></script>
+    <script src="scripts/order/directives/OrdersList.js"></script>
 
 
 
