Updated order list view & added buttons enabled/disabled

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
     <script src="scripts/controllers.js"></script>
     <script src="scripts/templates.js"></script>
 
+    <script src="scripts/order/constants/OrderConstants.js"></script>
     <script src="scripts/order/controllers/OrderList.js"></script>
     <script src="scripts/order/factories/Order.js"></script>
     <script src="scripts/order/factories/OrderDetails.js"></script>
