Added store details view

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,9 @@
     <script src="scripts/order/services/Order.js"></script>
     <script src="scripts/order/directives/OrdersList.js"></script>
 
+    <script src="scripts/store/directives/StoreDetails.js"></script>
+    <script src="scripts/store/services/Store.js"></script>
+
 
 
     <!-- endbuild -->
