Edit store info

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
 
     <script src="scripts/store/directives/StoreDetails.js"></script>
     <script src="scripts/store/services/Store.js"></script>
+    <script src="scripts/store/controllers/StoreEdit.js"></script>
 
 
 
