Added category and productCategory create operation

--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,10 @@
     <script src="scripts/store/services/Store.js"></script>
     <script src="scripts/store/controllers/StoreEdit.js"></script>
 
+    <script src="scripts/product/controllers/CategoryAdd.js"></script>
+    <script src="scripts/product/controllers/ProductAdd.js"></script>
+    <script src="scripts/product/controllers/ProductList.js"></script>
+
 
 
     <!-- endbuild -->
