Refactor: moved logic from service to adapter - 1st part

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
     <script src="scripts/order/services/Order.js"></script>
     <script src="scripts/order/directives/OrdersList.js"></script>
 
+    <script src="scripts/store/adapters/StoreFirebase.js"></script>
     <script src="scripts/store/directives/StoreDetails.js"></script>
     <script src="scripts/store/services/Store.js"></script>
     <script src="scripts/store/controllers/StoreEdit.js"></script>
